https://github.com/np1139059565/languageget/issues/2#issue-1039560727

--- a/miniprogram/pages/setting/index.wxss
+++ b/miniprogram/pages/setting/index.wxss
@@ -2,9 +2,17 @@
 .container{
     overflow: auto;
 }
+.c-progress{
+    width: 100%;
+    height: 1vh;
+}
+.c-scroll{
+    width: 100%;
+    height: 99vh;
+    overflow: auto;
+}
 .c-table{
     display: table;
-    height: 100%;
 }
 .c-tr{
     display: table-row;
