--- a/miniprogram/pages/setting/index.wxml
+++ b/miniprogram/pages/setting/index.wxml
@@ -1,7 +1,7 @@
 <!--index.wxml-->
 <view class="container">
-    <view class="c-progress">
-        <progress progress percent="40" active stroke-width="3"/>
+    <view class="c-progress" wx:if="{{dProgress.isSHow}}">
+        <progress progress percent="{{dProgress.pro}}" stroke-width="2"/>
     </view>
     <view class="c-scroll">
         <view class="c-table">
