--- a/miniprogram/pages/setting/index.wxss
+++ b/miniprogram/pages/setting/index.wxss
@@ -4,7 +4,9 @@
 }
 .c-progress{
     width: 100%;
-    height: 1vh;
+    position: absolute;
+    top: 0;
+    left: 0;
 }
 .c-scroll{
     width: 100%;
