https://github.com/np1139059565/languageget/issues/2#issue-1039560727

--- a/miniprogram/pages/setting/index.wxml
+++ b/miniprogram/pages/setting/index.wxml
@@ -1,7 +1,7 @@
 <!--index.wxml-->
 <view class="container">
     <view class="c-progress" wx:if="{{dProgress.isShow}}">
-        <progress progress percent="{{dProgress.pro}}" stroke-width="2"/>
+        <progress percent="{{dProgress.pro}}" stroke-width="2"/>
     </view>
     <view class="c-scroll">
         <view class="c-table">
