--- a/miniprogram/pages/table/index.wxss
+++ b/miniprogram/pages/table/index.wxss
@@ -7,6 +7,12 @@ page {
   justify-content: flex-start;
 }
 
+.c-progress{
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
 
 .c-table{
   width: calc(100% - 2vw);
