--- a/miniprogram/pages/table/index.wxml
+++ b/miniprogram/pages/table/index.wxml
@@ -37,10 +37,11 @@
         </view>
 <!--        table options-->
         <view class="c-tr">
-            <view class="c-click c-td c-t-option" wx:for="{{dTable.options}}" wx:for-item="item"  style="{{item.style}}">
-                <input wx:if="{{item.type=='input'}}" catchinput="{{item.ev}}" data-event1-data1="{{item.evData}}"
-                       value="{{item.text}}" type="{{item.inputType}}"/>
-                <view wx:else catchtap="{{item.ev}}" data-event1-data1="{{item.evData}}">{{item.text}}</view>
+            <view class="c-click c-td" wx:for="{{dTable.options}}" wx:for-item="item">
+                <input class="c-t-option" wx:if="{{item.type=='input'}}" catchinput="{{item.ev}}"
+                       data-event1-data1="{{item.evData}}" value="{{item.text}}" type="{{item.inputType}}" style="{{item.style}}"/>
+                <view class="c-t-option" wx:else catchtap="{{item.ev}}" data-event1-data1="{{item.evData}}"
+                      style="{{item.style}}">{{item.text}}</view>
             </view>
         </view>
     </view>
